# Psychological-Counseling-Chatbot-Using-LLM

./: README.md
Back-End-main/: README.md  db.py  db_base.py  doctor_llm_test.ipynb  log.py  logging.conf  main.py  mental_llm_test.ipynb  pyproject.toml  requirements.txt
Back-End-main/ai/llm/: __init__.py  config.py  manager.py  scheduler.py  scheduler_test.py
Back-End-main/ai/llm/meta/: adapter_config.py
Back-End-main/ai/llm/models/: __init__.py  analysing_llm.py  mental_llm.py  mock.py
Back-End-main/ai/llm/models/interface/: base_ai_model.py
Back-End-main/ai/rag/: __init__.py
Back-End-main/apis/: __init__.py  chat.py  raw.py  room.py  user.py
Back-End-main/assets/: knowledge_in_rag_data.csv
Back-End-main/auth/: auth_bcrypt.py  auth_bearer.py  auth_handler.py
Back-End-main/constants/: path.py
Back-End-main/core/: env.py
Back-End-main/error/: exceptions.py  handler.py
Back-End-main/model/: __init__.py  chat.py  room.py  user.py
Back-End-main/schemas/: chat.py  common.py  room.py  user.py
Back-End-main/services/: chat.py  room.py  user.py
Back-End-main/utils/: __init__.py  converters.py  date.py  os_utils.py
Back-End-main/validator/: access_code.py  chat.py
